--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2,
-    "useTabs": true,
+    "useTabs": false,
     "jsxSingleQuote": true,
-    "printWidth": 80
-  }
+    "printWidth": 120
+}
